--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,13 @@
-@import url('http://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 a {
   color: #fff;
+}
+#map {
+  height: 50%;
+}
+/* Optional: Makes the sample page fill the window. */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
