math functionality works

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,8 @@ html, body {
 }
 
 .card {
-  height: 500px;
-  width: 1000px;
+  height: 50vw;
+  width: 70vw;
+  max-width: 1200px;
+  max-height: 600px;
 }
